Fix molecule playbook with the right dependancies.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -2,13 +2,20 @@
 - name: Converge
   hosts: all
   become: true
-
+  vars:
+    pip_install_packages:
+      - docker-py
   pre_tasks:
     - name: Update apt cache.
       apt: update_cache=yes
       when: ansible_os_family == 'Debian'
 
+    - name: Apply dependancies
+      include_role:
+        name: "{{ item }}"
+      with_items:
+        - geerlingguy.pip
+        - geerlingguy.docker
+
   roles:
-    - role: geerlingguy.docker
-    - role: geerlingguy.pip
     - role: ansible-ugly-map
